test/tests/stages/7_compound_statements/valid/use_in_inner_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  ;
  {
  identifier(x)
  =
  const int(3)
  ;
  }
  {
  return
  identifier(x)
  ;
  }
  }
