test/tests/stages/7_compound_statements/invalid_semantics/double_define.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  {
  int
  identifier(a)
  ;
  int
  identifier(a)
  ;
  }
  }
